--- a/public/musa/reusable-blocks/menu/menu.css
+++ b/public/musa/reusable-blocks/menu/menu.css
@@ -29,7 +29,7 @@
  background-color: #fff;
 }
 
-.menu, .sort__block, .reports, .reports-footer,.reports-footer__action__sort {
+.menu__main, .sort__block, .reports, .reports-footer,.reports-footer__action__sort {
   -webkit-box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
   box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
@@ -147,7 +147,7 @@
 
   body .menu {
     height: 100vh;
-    width: 420px;
+    width: 400px;
   }
 
   body .menu__main {
