--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -28,55 +28,77 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-refresh:before {
-    content: "\e9c5";
-}
-.icon-vk:before {
-    content: "\e922";
-}
-.icon-telegram:before {
-    content: "\e923";
-}
-.icon-instagram:before {
-    content: "\e924";
-}
-.icon-lock:before {
-    content: "\e925";
-}
-.icon-pin:before {
-    content: "\e926";
-}
 .icon-archive_alt:before {
-    content: "\e90e";
+    content: "\e901";
 }
 .icon-archive:before {
-    content: "\e90f";
+    content: "\e902";
 }
 .icon-arrow_drop_down:before {
-    content: "\e910";
+    content: "\e903";
 }
 .icon-calendar:before {
-    content: "\e911";
+    content: "\e904";
 }
-.icon-darhboard_alt:before {
-    content: "\e912";
+.icon-check:before {
+    content: "\e905";
+}
+.icon-chevron-down:before {
+    content: "\e906";
+    font-size: 6px;
+}
+.icon-dashboard_alt:before {
+    content: "\e907";
+}
+.icon-desk:before {
+    content: "\e908";
+}
+.icon-document-add:before {
+    content: "\e909";
+}
+.icon-document-check:before {
+    content: "\e90a";
+}
+.icon-document-update:before {
+    content: "\e90b";
+}
+.icon-document:before {
+    content: "\e90c";
 }
 .icon-expand_left_right:before {
-    content: "\e913";
+    content: "\e90d";
 }
 .icon-folder_alt:before {
-    content: "\e914";
+    content: "\e90e";
 }
 .icon-import_light:before {
-    content: "\e915";
+    content: "\e90f";
+}
+.icon-info:before {
+    content: "\e910";
+}
+.icon-instagram:before {
+    content: "\e911";
+}
+.icon-lock:before {
+    content: "\e912";
+}
+.icon-log-out:before {
+    content: "\e913";
+}
+.icon-map:before {
+    content: "\e914";
 }
 .icon-menu:before {
-    content: "\e916";
+    content: "\e915";
 }
 .icon-notifications:before {
-    content: "\e917";
+    content: "\e916";
 }
 .icon-order:before {
+    content: "\e917";
+}
+.icon-pin:before {
     content: "\e918";
 }
 .icon-plus-circle:before {
@@ -88,61 +110,42 @@
 .icon-save_light:before {
     content: "\e91b";
 }
-.icon-setting:before {
+.icon-search:before {
     content: "\e91c";
 }
-.icon-sort:before {
+.icon-setting:before {
     content: "\e91d";
 }
-.icon-trophy:before {
+.icon-sort:before {
     content: "\e91e";
 }
-.icon-user:before {
+.icon-sortable-down:before {
     content: "\e91f";
 }
-.icon-desk:before {
-    content: "\e909";
-}
-.icon-document-add:before {
-    content: "\e905";
-}
-.icon-document-check:before {
-    content: "\e906";
-}
-.icon-document-update:before {
-    content: "\e907";
-}
-.icon-star:before {
-    content: "\e908";
-}
-.icon-log-out:before {
-    content: "\e921";
-}
-.icon-chevron-down:before {
-    content: "\e90a";
-    font-size: 6px;
-}
-.icon-sortable-down:before {
-    content: "\e90b";
-}
 .icon-sortable-up:before {
-    content: "\e90c";
+    content: "\e920";
 }
 .icon-sortable:before {
-    content: "\e90d";
+    content: "\e921";
 }
-.icon-map:before {
-    content: "\e904";
+.icon-star-fill:before {
+    content: "\e922";
 }
-.icon-search:before {
-    content: "\e903";
+.icon-star:before {
+    content: "\e923";
 }
-.icon-check:before {
+.icon-telegram:before {
+    content: "\e924";
+}
+.icon-trophy:before {
+    content: "\e925";
+}
+.icon-user:before {
+    content: "\e926";
+}
+.icon-vk:before {
+    content: "\e927";
+}
+.icon-refresh:before {
     content: "\e900";
-}
-.icon-info:before {
-    content: "\e901";
-}
-.icon-document:before {
-    content: "\e902";
 }
