--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,4 +4,4 @@
 @import "/assets/css/browsers.css";
 @import "/assets/css/fonts.css";
 @import "/assets/css/responsive.css";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Open+Sans:wght@400;500;600;700;800&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Open+Sans:wght@400;500;600;700;800&display=swap');*/
