--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -426,7 +426,7 @@ h3 {
 }
 
 .sortable-table .sortable-icon:before {
-    content: "\e90d";
+    content: "\e921";
     font-family: 'icomoon' !important;
     font-style: normal;
     font-weight: normal;
