--- a/assets/leader/css/fonts.css
+++ b/assets/leader/css/fonts.css
@@ -1,4 +1,36 @@
-/* Project icons */
+/* Основные шрифты */
+
+@font-face {
+    font-family: "Open Sans";
+    src: url(/assets/fonts/OpenSans-Light.ttf);
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url(/assets/fonts/OpenSans-Regular.ttf);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url(/assets/fonts/OpenSans-Medium.ttf);
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url(/assets/fonts/OpenSans-SemiBold.ttf);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url(/assets/fonts/OpenSans-Bold.ttf);
+    font-weight: 700;
+}
+
+/* Шрифты иконок */
 
 @font-face {
     font-family: 'icomoon';
@@ -28,6 +60,15 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-toggle:before {
+    content: "\e92a";
+}
+.icon-bell:before {
+    content: "\e928";
+}
+.icon-chart:before {
+    content: "\e929";
+}
 .icon-archive_alt:before {
     content: "\e901";
 }
@@ -92,7 +133,7 @@
 .icon-menu:before {
     content: "\e915";
 }
-.icon-notifications:before {
+.icon-bell-fill:before {
     content: "\e916";
 }
 .icon-order:before {
