--- a/assets/staff/css/header.css
+++ b/assets/staff/css/header.css
@@ -13,6 +13,7 @@ header {
 .user__dropdown-menu__block a {
   color: #535C69;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .header__main {
@@ -43,6 +44,16 @@ header {
   color: #fff;
   outline: none;
   font-size: 16px;
+}
+
+.user__info__name span {
+  width: 100%;
+  display: block;
+}
+
+.user__info__arrow i {
+  color: white;
+  font-size: 8px;
 }
 
 .header__input input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -87,6 +98,7 @@ header {
   align-items: center;
   margin-left: 30px;
   position: relative;
+  cursor: pointer;
 }
 
 .user__info__name {
@@ -121,19 +133,23 @@ header {
   font-size: 14px;
   position: absolute;
   color: #535C69;
-  top: 55px;
+  top: 80px;
   z-index: 2;
   -webkit-box-shadow: 1px 1px 8px 1px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 1px 1px 8px 1px rgba(34, 60, 80, 0.2);
   box-shadow: 1px 1px 8px 1px rgba(34, 60, 80, 0.2);
   transition: 0.3s;
+  border-radius: 6px;
+  padding: 10px;
+  font-size: 16px;
 }
 
 .user__dropdown-menu__block__variables {
-  padding: 0 15px;
+  padding: 0 10px;
   height: 35px;
   display: flex;
   align-items: center;
+  border-radius: 6px;
 }
 
 .user__dropdown-menu__block__variables:hover {
