Database data is added to ministry report page & more

--- a/assets/staff/css/app.css
+++ b/assets/staff/css/app.css
@@ -2,4 +2,6 @@
 @import "header.css";
 @import "menu.css";
 @import "reports.css";
+@import "activity.css";
+@import "report.css";
 @import "styles.css";
