--- a/assets/staff/css/reports.css
+++ b/assets/staff/css/reports.css
@@ -14,6 +14,7 @@
   font-size: 17px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .body__back-button a {
@@ -326,9 +327,6 @@
 .reports-title__my-reports__text {
   display: flex;
   align-items: center;
-}
-
-.reports-title__my-reports__text {
   font-size: 24px;
   line-height: 33px;
   letter-spacing: 0.01em;
@@ -352,6 +350,44 @@
   border: none;
   border-radius: 1px;
   transition: 0.3s;
+}
+
+.dropdown-arrow {
+  font-size: 8px;
+  margin-right: 10px;
+  color: #535C69;
+}
+
+.save__changes {
+  width: 100%;
+  height: 60px;
+  background-color: #fff;
+  padding: 10px 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.save__changes button {
+  width: 150px;
+  height: 40px;
+  background-color: #157DCD;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  border-radius: 1px;
+}
+
+.save__changes button:active {
+  background-color: #1372bb;
+}
+
+.disabled {
+  background-color: #51adf5 !important;
 }
 
 .sort {
