--- a/assets/leader/css/fonts.css
+++ b/assets/leader/css/fonts.css
@@ -60,6 +60,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cross-circle:before {
+    content: "\e92c";
+}
+.icon-cross:before {
+    content: "\e92b";
+}
 .icon-toggle:before {
     content: "\e92a";
 }
