--- a/assets/leader/css/styles.css
+++ b/assets/leader/css/styles.css
@@ -1143,6 +1143,10 @@ h3 {
     height: 100px;
 }
 
+.navbar-container-center {
+    justify-content: center;
+}
+
 .navbar-menu {
     flex-basis: 100%;
     display: flex;
