--- a/assets/staff/css/reports.css
+++ b/assets/staff/css/reports.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 61px;
   border-radius: 4px;
-  margin-bottom: 10px;
+  margin-bottom: 22px;
   font-size: 17px;
   display: flex;
   align-items: center;
@@ -51,6 +51,15 @@
   -webkit-user-select: none;
   user-select: none;
 }
+
+.reports-title__my-reports__text .title {
+  margin-left: 10px;
+  font-size: 20px;
+  color: #9fa9b7;
+  top: 2px;
+  position: relative;
+}
+
 .reports-footer__action img {
   padding-right: 6.5px;
 }
@@ -70,7 +79,7 @@
 .reports-footer__action__sort {
   position: absolute;
   opacity: 1;
-  z-index: 2;
+  z-index: 1000;
   width: 233px;
   text-align: center;
   line-height: 30px;
@@ -316,7 +325,7 @@
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 22px 0 28px;
+  margin: 0 0 28px;
 }
 
 .reports-title__my-reports {
