--- a/assets/staff/css/styles.css
+++ b/assets/staff/css/styles.css
@@ -331,7 +331,6 @@ body {
   .reports-footer__action__sort {
     position: absolute;
     opacity: 1;
-    z-index: 2;
     width: 233px;
     text-align: center;
     line-height: 30px;
@@ -519,8 +518,13 @@ body {
   .reports-list__more {
     width: 100px;
   }
-}
 
+  .reports-title__my-reports__text .title {
+    margin-left: 6px;
+    font-size: 16px;
+    top: 1px;
+  }
+}
 
 @media screen and (max-height: 800px) {
   .menu {
