--- a/assets/staff/css/app.css
+++ b/assets/staff/css/app.css
@@ -1,3 +1,4 @@
+@import "/assets/components/components.css";
 @import "/assets/leader/css/fonts.css";
 @import "/assets/chosen/chosen.css";
 @import "header.css";
@@ -7,3 +8,4 @@
 @import "report.css";
 @import "styles.css";
 @import "components.css";
+@import "notifications.css";
