--- a/assets/staff/css/notifications.css
+++ b/assets/staff/css/notifications.css
@@ -47,6 +47,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    flex-basis: 100%;
 }
 
 .notifications-sidebar-districts-info .district {
@@ -57,6 +58,21 @@
     font-size: 12px;
     font-weight: 700;
     color: #99A1AC;
+}
+
+.notifications-sidebar-districts-unseen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.notifications-sidebar-districts-unseen .unseen {
+    background: #F7685B;
+    color: #fff;
+    border-radius: 100%;
+    padding: 3px 6px;
+    font-size: 12px;
+    font-weight: 600;
 }
 
 .notifications-sidebar-districts .item:hover, .notifications-sidebar-districts .item.active {
