Support & Call center pages, methods, routes, rules and scripts added

--- a/assets/leader/css/fonts.css
+++ b/assets/leader/css/fonts.css
@@ -60,6 +60,15 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-envelope:before {
+    content: "\e92e";
+}
+.icon-phone:before {
+    content: "\e92f";
+}
+.icon-world:before {
+    content: "\e92d";
+}
 .icon-cross-circle:before {
     content: "\e92c";
 }
