--- a/assets/staff/css/app.css
+++ b/assets/staff/css/app.css
@@ -10,3 +10,5 @@
 @import "components.css";
 @import "notifications.css";
 @import "profile.css";
+@import "support.css";
+@import "call_center.css";
