Refactoring & some fixes

--- a/assets/staff/css/call_center.css
+++ b/assets/staff/css/call_center.css
@@ -17,6 +17,7 @@
 .call-centers {
     max-height: 450px;
     overflow: scroll;
+    border-radius: 4px;
 }
 
 .call-centers .reports__body__line {
