--- a/assets/staff/css/profile.css
+++ b/assets/staff/css/profile.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    position: relative;
 }
 
 .profile__avatar-main {
@@ -245,4 +246,64 @@
 
 .profile__form__footer__button:active {
     background-color: #1273bd;
+}
+
+.profile__footer__edit button {
+    background: #535C69;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    font-size: 16px;
+}
+
+.profile__footer .profile__footer__edit {
+    height: 60px;
+}
+
+.output-content {
+    background-position: center;
+    background-size: cover;
+}
+
+.edit-profile-form {
+    display: none;
+}
+
+.edit-profile-form.active {
+    display: unset;
+}
+
+.view-profile-form {
+    display: none;
+}
+
+.view-profile-form.active {
+    display: unset;
+}
+
+/* Fired */
+
+.fired-message {
+    display: none;
+}
+
+.fired-message i {
+    margin-right: 10px;
+}
+
+.fired .profile__avatar-main, .fired .profile__form {
+    opacity: 0.3;
+}
+
+.fired .fired-message {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    z-index: 100;
+    padding: 14px;
+    border-radius: 4px;
+    box-shadow: 0 0 30px rgba(0,0,0,0.1);
 }
