--- a/assets/staff/css/support.css
+++ b/assets/staff/css/support.css
@@ -69,10 +69,11 @@
     outline: none;
     border: 1px solid #EEEFF0;
     color: #535C69;
-    padding: 10px;
+    padding: 7px 10px;
     font-size: 14px;
     resize: none;
     border-radius: 4px;
+    font-family: 'Open Sans', serif;
 }
 
 .support__footer {
