District ratings added for region boss and staff pages, added general rating, and some fixes in front & script

--- a/assets/staff/css/center.css
+++ b/assets/staff/css/center.css
@@ -211,6 +211,7 @@
     background-position: center;
     background-size: cover;
     border-radius: 100%;
+    border: 2px solid #e0e0e0;
 }
 
 .user-box .user-info {
