--- a/assets/staff/css/styles.css
+++ b/assets/staff/css/styles.css
@@ -27,6 +27,7 @@ footer, header, hgroup, menu, nav, section {
 input, textarea {
   color: #535C69;
   font-size: 15px;
+  font-family: 'Open Sans', serif;
 }
 
 body {
