--- a/assets/staff/css/table.css
+++ b/assets/staff/css/table.css
@@ -4,11 +4,10 @@
 
 .report-table.finished__table {
     height: 100%;
-    border-bottom: 3px solid #535C69;
 }
 
 .report-table .table {
-    max-height: 70vh;
+    max-height: calc(100vh - 370px);
     overflow-y: auto;
 }
 
@@ -28,14 +27,8 @@
 .report-table table {
     width: 100%;
     border-collapse: separate;
-    border-spacing: 0;
+    border-spacing: 6px;
 }
-
-/*thead {*/
-/*    position: sticky;*/
-/*    top: 0;*/
-/*    z-index: 11;*/
-/*}*/
 
 .report-table td:first-child, th:first-child {
     position:sticky;
@@ -57,11 +50,6 @@
     top: 0;
     background: #fff;
     z-index:2;
-    border: 3px solid #eef2f4;
-}
-
-.report-table th:first-child {
-    border-right: 6px solid #EEF2F4;
 }
 
 .report-table th:first-child, .report-table th:nth-child(2) {
@@ -74,28 +62,21 @@
     height: 56px;
     line-height: 28px;
     vertical-align: middle;
-    border-radius: 4px;
     padding-left: 4px;
     font-size: 14px;
-    border-bottom: 6px solid #eef2f4 !important;
     min-width: 130px;
 }
 
+.report-table td, .report-table th {
+    border-radius: 4px;
+}
+
+.report-table tbody tr td:nth-child(2) {
+    max-width: 500px;
+}
+
 .report-table .table__main__header td:not(:first-child, #description__title) {
-    border: 3px solid #eef2f4;
     border-bottom: 0;
-}
-
-.report-table .table__main__header td:first-child {
-
-    border-right: 6px solid #eef2f4;
-
-}
-
-.report-table #description__title {
-
-    border-right: 6px solid #eef2f4;
-
 }
 
 .report-table .table__main__header td:first-child, tbody td:first-child {
@@ -109,8 +90,6 @@
     min-width: 240px;
     line-height: 23.8px;
     font-size: 14px;
-    border-right: 6px solid #eef2f4;
-    border-bottom: 3px solid #eef2f4;
     padding: 0 10px;
 }
 
@@ -227,18 +206,16 @@
 .report-table tbody td {
     background-color: #fff;
     vertical-align: middle;
-    padding-left: 4px;
+    padding: 12px;
     font-size: 14px;
+    line-height: 24px;
 }
 
 .report-table tbody td:not(.description, .number) {
-    border: 3px solid #F1F1F1;
     border-top: 0;
 }
 
 .report-table tbody tr td:first-child {
-    border-right: 6px solid #eef2f4;
-    border-bottom: 6px solid #eef2f4;
     min-width: 60px;
 }
 
