--- a/assets/staff/css/profile.css
+++ b/assets/staff/css/profile.css
@@ -237,7 +237,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #fff !important;
     cursor: pointer;
     border: none;
     padding: 0 14px;
