--- a/assets/leader/css/styles.css
+++ b/assets/leader/css/styles.css
@@ -1241,6 +1241,7 @@ h3 {
 .rating__regions {
     padding: 10px 40px;
     width: 220px;
+    position: relative;
 }
 
 .rating__regions ul {
@@ -1260,6 +1261,7 @@ h3 {
     flex-basis: 100%;
     display: flex;
     padding: 16px;
+    position: relative;
 }
 
 .rating__bars-diagram .rating-list {
