--- a/assets/staff/css/table.css
+++ b/assets/staff/css/table.css
@@ -262,12 +262,12 @@
     border: 1px solid #D4D6D9;
 }
 
-.sv-table .ministry-index-input {
+.sv-table .success-index-input {
     border: 1px solid #3AA12A;
     background-color: #EAF9C4;
 }
 
-.sv-table .district-index-input {
+.sv-table .danger-index-input {
     border: 1px solid #F7685B;
     background-color: #EEF2F4;
 }
@@ -278,7 +278,7 @@
     color: #b7b1b1;
 }
 
-.sv-table .ministry-index-input.not-current, .sv-table .district-index-input.not-current, .sv-table .result-index-input.not-current {
+.sv-table .success-index-input.not-current, .sv-table .danger-index-input.not-current, .sv-table .result-index-input.not-current {
     text-align: center;
 }
 
