Report rights for ministry of economics & some tasks completed

--- a/assets/staff/css/report.css
+++ b/assets/staff/css/report.css
@@ -80,6 +80,7 @@
   user-select: none;
   cursor: pointer;
   margin-right: 13px;
+  border-radius: 4px;
 }
 
 .reports-footer__action img {
@@ -198,15 +199,44 @@
   -moz-box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
   box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
   user-select: none;
+  border-radius: 4px;
 }
 
 .success__modal__header__exit, .fail__modal__header__exit, .revision__modal__header__exit {
   cursor: pointer;
 }
 
+.fail__modal__header__text, .success__modal__header__text {
+  margin-left: 4px;
+}
+.fail__modal__header__exit, .success__modal__header__exit{
+  margin-right: 12px;
+}
+
 .success__modal__header__exit img, .fail__modal__header__exit img, .revision__modal__header__exit img {
   width: 20px;
   height: 20px;
+}
+
+.fail__modal__body form {
+  width: 100%;
+}
+
+.fail__modal__body form .fail__modal__footer button {
+  border: unset;
+  border-radius: 4px;
+}
+
+.fail__modal__body form textarea {
+  border-radius: 4px;
+}
+
+.success__modal__body__text {
+  margin: 0 0 14px;
+}
+
+.fail__modal__body__text {
+  margin: 0 0 8px;
 }
 
 .revision__modal__body {
@@ -259,11 +289,11 @@
 
 .success__modal__body {
   font-size: 14px;
-  height: 120px;
   flex-direction: column;
   align-items: start;
   padding: 17px 15px 18px 15px;
   margin-top: 6px;
+  display: table;
 }
 
 .fail__modal__body {
@@ -320,12 +350,14 @@
   height: 40px;
   background-color: #00B894;
   color: #fff;
-  display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  border-radius: 1px;
   user-select: none;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 4px;
+  display: flex;
 }
 
 .success__modal__body__button:active {
@@ -338,6 +370,7 @@
 
 .reports-body__side-block__button {
   width: unset;
+  border-radius: 4px;
 }
 
 .reports-body__side-block {
