--- a/assets/staff/css/activity.css
+++ b/assets/staff/css/activity.css
@@ -241,3 +241,33 @@
 .indicator-comparison div:last-child {
     margin: unset;
 }
+
+.actions__activity-form textarea {
+    width: 100%;
+    height: 100px;
+    border: 1px solid #E4E4E4;
+    border-radius: 4px;
+    resize: none;
+    padding: 6px 10px;
+    margin-bottom: 14px;
+}
+
+.actions__activity-message {
+    font-size: 14px;
+    padding: 12px 0;
+}
+
+.actions__activity-reply {
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    background: #f2f2f2;
+    padding: 12px;
+    border-radius: 6px;
+}
+
+.actions__activity-reply .info {
+    font-weight: 600;
+    color: rgba(0,0,0,0.3);
+    margin-bottom: 4px;
+}
