--- a/assets/staff/css/reports.css
+++ b/assets/staff/css/reports.css
@@ -481,3 +481,17 @@
 .sort-element {
   margin-right: 6px;
 }
+
+.button.title-button:hover {
+  color: #7394ca;
+  border: 1px solid #7394ca;
+}
+
+.button.title-button {
+  border: 1px solid #b7bcc4;
+  top: 2px;
+  margin-left: 12px;
+  position: relative;
+  font-weight: 600;
+  color: #8d939d;
+}
